--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,23 @@ body {
     font-family: 'Oswald', sans-serif;
 }
 
+/* HEADER */
+header {
+    background-color: rgba(90, 154, 244, 0.65);
+    height: 100px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+header h1 {
+    margin: 0;
+    padding: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+    text-shadow: 1px 2px 2px rgb(130, 130, 130);
+    font-size: 40px;
+}
+
 /* SCORE */
 .score-board {
     display: flex;
@@ -59,7 +76,7 @@ body {
 .player-container h3 {
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin: auto 10px;
+    margin: auto 20px;
     width: 15%;
 }
 .player-container p {
@@ -112,4 +129,8 @@ form button {
     font-size: 15px;
     color: white;
     text-shadow: 1px 1px 2px rgb(130, 130, 130);
+}
+.deleteP {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.712);
 }
